[package]
name = "macboxx"
authors = ["prmaloney"]
version = "0.1.4"
edition = "2021"
description = "A rust-based boxx-style keyboard mapper, designed for Slippi melee"
repository = "https://github.com/prmaloney/macboxx_rs"
license = "MIT"
readme = "README.md"
keywords = ["slippi", "melee", "keyboard", "boxx", "ahk"]
categories = ["command-line-utilities", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
libc = "0.2.153"
rdev = "0.5.3"
rust-ini = "0.21.0"
serde = "1.0.197"
serde_derive = "1.0.197"
toml = "0.8.12"
unix-named-pipe = "0.2.0"
